@@ -13,7 +13,7 @@
     "Nicola Pero",
     "Pierre-Yves Rivaille",
     "Adam Fedor",
-    "Gregory Jonh Casamento",
+    "Gregory John Casamento",
     "Riccardo Mottola");
   NSIcon = "ProjectCenter.tiff";
   NSExecutable = ProjectCenter;
