@@ -1,3 +1,8 @@
+2015-11-02 Riccardo Mottola <rm@gnu.org>
+
+	* Modules/Editors/ProjectCenter/PCEditorView.m
+	Cleanups and NSInteger conversion.
+
 2015-06-16 Riccardo Mottola <rm@gnu.org>
 
 	* Framework/GNUmakefile
